Map spacing is fixed

--- a/assets/sass/pages/_contact.scss
+++ b/assets/sass/pages/_contact.scss
@@ -7,6 +7,7 @@
 	padding-bottom: 277px;
 	text-align: center;
 	margin-top: -250px;
+
 	.location-info {
 		color: $white;
 		-webkit-box-shadow: 0px 3px 35px rgba(0, 0, 0, 0.15);
@@ -25,6 +26,17 @@
 			max-width: 165px;
 			line-height: 1.58;
 			font-family: $primary-medium;
+			margin-bottom: 0;
+		}
+	}
+
+	@include for-size(phone-only) {
+		padding-top: 65px;
+		padding-bottom: 65px;
+		margin-top: -150px;
+
+		.location-info {
+			padding: 15px;
 		}
 	}
 }
